--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+html, body {
+  height: 100%;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  font-family: 'Roboto', system-ui, sans-serif;
+}
+
+body {
+  box-sizing: border-box;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto';
   line-height: 1.5;
   font-weight: 400;
 
@@ -20,11 +34,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  min-height: 100vh;
 }
 
 h1 {
