--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 html, body {
   height: 100%;
   width: 100vw;
@@ -5,7 +7,8 @@ html, body {
   padding: 0;
   overflow-y: auto;
   overflow-x: hidden;
-  font-family: 'Roboto', system-ui, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
+  color: #1C355F;
 }
 
 body {
@@ -71,4 +74,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+body, html, #root, .mainLayout, .header, .content {
+  color: #1C355F;
 }
