--- a/src/components/well/WellVisualization.module.css
+++ b/src/components/well/WellVisualization.module.css
@@ -105,14 +105,12 @@
 
 .tierra {
   position: absolute;
-  top: 11px;
-  left: 0;
   width: 120%;
-  height: 100%;
+  height: 110%;
   background-image: url('../../assets/img/terreno1.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center -27px;
+  background-position: center -30px;
 }
 
 .aguaInferior {
@@ -211,8 +209,8 @@
 }
 
 .sensor {
-  width: 10px;
-  height: 200px;
+  width: 3.3%;
+  height: 40%;
   background-color: #202b2c;
   position: absolute;
   border-radius: 10px;
@@ -251,8 +249,8 @@
 }
 
 .lineaCaudalimetro {
-  width: 140px;
-  height: 10px;
+  width: 46.5%;
+  height: 2.2%;
   background-color: #222b2c;
   border-radius: 5px;
   position: absolute;
@@ -398,4 +396,43 @@
   filter: grayscale(1) brightness(0.8) !important;
   opacity: 0.7;
   transition: filter 0.3s, opacity 0.3s;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    max-width: 98vw;
+    min-height: 400px;
+    padding: 16px 4vw 16px 4vw;
+  }
+  .pozo {
+    width: 220px;
+    height: 350px;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    max-width: 100vw;
+    min-height: 220px;
+    padding: 8px 2vw 8px 2vw;
+  }
+  .pozoBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    padding: 0;
+  }
+  .pozoScale {
+    width: 100vw;
+    min-width: 0;
+    padding: 0;
+    justify-content: center;
+  }
+  .pozo {
+    width: 90vw;
+    height: auto;
+    min-width: 0;
+    margin: 0 auto;
+  }
 }
