--- a/src/pages/clients/ClientCreatePage.module.css
+++ b/src/pages/clients/ClientCreatePage.module.css
@@ -12,6 +12,7 @@
     overflow-x: hidden;
 }
 
+/*
 .formCard {
     width: auto;
     max-width: 1200px;
@@ -38,3 +39,4 @@
     padding: 20px;
   }
 }
+*/
