--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,38 @@ button:focus-visible {
 body, html, #root, .mainLayout, .header, .content {
   color: #1C355F;
 }
+
+/* Colores globales para formularios y cards */
+.ant-form-item-label > label {
+  color: #1E293B !important;
+  font-weight: 600 !important;
+}
+
+.ant-input, .ant-input-number, .ant-picker-input > input {
+  color: #1E293B !important;
+  font-weight: 600 !important;
+}
+
+.ant-checkbox-wrapper, .ant-switch + span, .ant-checkbox + span {
+  color: #1E293B !important;
+  font-weight: 600 !important;
+}
+
+/* Switch color para clientes */
+.ant-switch-checked {
+  background-color: #1890FF !important;
+}
+
+/* Checkbox color para clientes */
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #1890FF !important;
+  border-color: #1890FF !important;
+}
+
+.ant-checkbox-checked .ant-checkbox-inner:after {
+  border-color: #fff !important;
+}
+
+.ant-checkbox-checked .ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: #1890FF !important;
+}
