--- a/src/pages/dga/DGA_MEE.css
+++ b/src/pages/dga/DGA_MEE.css
@@ -1,12 +1,10 @@
-.bottom-container{
+.circle-container {
+    height: 24px; 
+    width: 24px;
+    border: solid 1px #D9D9D9;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 16px;
-}
-
-.bottom-info {
-    width: 33%;
+    align-items:center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
 }
