--- a/src/components/layout/AppLayout.module.css
+++ b/src/components/layout/AppLayout.module.css
@@ -174,7 +174,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 12px 18px 0 18px;
+  padding: 6px 18px 0 18px;
   border-top: 1px solid #3368AB;
   width: 100%;
   justify-content: flex-start;
@@ -241,16 +241,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 218px;
+  width: calc(100% - 8px);
   height: 32px;
   border-radius: 8px;
   border: 1px solid #3B5484;
   background: #3B5484;
   box-sizing: border-box;
-  padding: 5px 10px 5px 16px;
+  padding: 5px 14px;
   cursor: pointer;
   margin-bottom: 18px;
-  margin-left: 8px;
+  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .statusIndicator {
@@ -328,16 +329,24 @@
   }
 
   .header {
-    padding: 0 8px !important;
-    min-width: 0;
-    width: 100vw;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
   .headerContent {
     padding-left: 8px;
     padding-top: 10px;
+  }
+  .userSection {
+    padding-left: 24px !important;
+  }
+  .userSection .avatar {
+    margin-left: 8px;
+  }
+  .userSection .userDetails {
+    margin-left: 8px;
+  }
+  .supportSection {
+    padding-left: 24px !important;
   }
 }
 
@@ -499,4 +508,60 @@
 
 .sidebar, .menuList {
   color: #fff !important;
+}
+
+.hamburgerButton {
+  background: #1C355F !important;
+  border-radius: 8px !important;
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: none !important;
+  border: none !important;
+  padding: 0 !important;
+  transition: none;
+  outline: none !important;
+}
+
+.hamburgerButton:active,
+.hamburgerButton:focus,
+.hamburgerButton:focus-visible {
+  background: #1C355F !important;
+  box-shadow: none !important;
+  outline: none !important;
+}
+
+.hamburgerButton:hover .hamburgerIcon {
+  filter: drop-shadow(0 0 6px #fff) drop-shadow(0 0 12px #fff);
+  transition: filter 0.3s;
+}
+
+.hamburgerIcon {
+  color: #fff !important;
+  font-size: 28px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 0.3s;
+}
+
+.hamburgerContainer {
+  background: #1C355F;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  margin-left: 0 !important;
+  padding-left: 0 !important;
+}
+
+.hamburgerButton:hover, .projectDropdownItem:hover, .projectDropdownMenu .ant-dropdown-menu-item:hover {
+  opacity: 0.85 !important;
+  background: inherit !important;
+  color: inherit !important;
+  border-color: inherit !important;
+  box-shadow: none !important;
 }
