--- a/src/components/layout/AppLayout.module.css
+++ b/src/components/layout/AppLayout.module.css
@@ -77,7 +77,7 @@
 .content {
   flex: 1;
   width: 100%;
-  background: #fff;
+  /* background: #fff; */
   min-height: 70vh;
   display: flex;
   flex-direction: column;
@@ -329,8 +329,11 @@
   }
 
   .header {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1001;
   }
   .headerContent {
     padding-left: 8px;
@@ -347,6 +350,12 @@
   }
   .supportSection {
     padding-left: 24px !important;
+  }
+  .mainLayout, .content {
+    background: #f4f6fa !important;
+  }
+  .content {
+    padding-top: 130px !important;
   }
 }
 
